<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_element_height"
            android:background="@color/color_grey"
            android:baselineAligned="false"
            android:gravity="center"
            app:layout_behavior=".LayoutBehavior"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/MyStileHeadNumberStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_rating"/>

                <TextView
                    style="@style/MyStileHeadTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_rating_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/MyStileHeadNumberStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_code_amount"/>

                <TextView
                    style="@style/MyStileHeadTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_code_amount_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/MyStileHeadNumberStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_projects_amount"/>

                <TextView
                    style="@style/MyStileHeadTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_projects_amount_text"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/MyStyleInfoList">

            <ImageView
                style="@style/MyStyleIconLeft"
                android:contentDescription="@string/DescriptionPhone"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout style="@style/MyStyleInfoListContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/phone"
                        style="@style/MyStyleInfoListEditText"
                        android:hint="@string/mobile_phone"
                        android:inputType="phone"
                        android:text="@string/my_phone"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/MyStyleIconRight"
                android:contentDescription="@string/content_descripshion"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View style="@style/MyStyleLineStyle"></View>

        <LinearLayout style="@style/MyStyleInfoList">

            <ImageView
                style="@style/MyStyleIconLeft"
                android:contentDescription="@string/DescriptionPhone"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout style="@style/MyStyleInfoListContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/mail"
                        style="@style/MyStyleInfoListEditText"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:text="@string/mail_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/send_img"
                style="@style/MyStyleIconRight"
                android:contentDescription="@string/content_descripshion"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View style="@style/MyStyleLineStyle"></View>

        <LinearLayout style="@style/MyStyleInfoList">

            <ImageView
                style="@style/MyStyleIconLeft"
                android:contentDescription="@string/DescriptionPhone"
                android:src="@drawable/ic_vk_circle_24"/>

            <LinearLayout style="@style/MyStyleInfoListContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/vk_text"
                        style="@style/MyStyleInfoListEditText"
                        android:hint="@string/vk_hint"
                        android:inputType="text"
                        android:text="@string/vk_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/vk_img"
                style="@style/MyStyleIconRight"
                android:contentDescription="@string/content_descripshion"
                android:src="@drawable/ic_eye_24"/>

        </LinearLayout>

        <View style="@style/MyStyleLineStyle"></View>

        <LinearLayout style="@style/MyStyleInfoList">

            <ImageView
                style="@style/MyStyleIconLeft"
                android:contentDescription="@string/DescriptionPhone"
                android:src="@drawable/ic_github_circle_24"/>

            <LinearLayout style="@style/MyStyleInfoListContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/git"
                        style="@style/MyStyleInfoListEditText"
                        android:hint="@string/repository_hint"
                        android:inputType="text"
                        android:text="@string/repository_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/repository_img"
                style="@style/MyStyleIconRight"
                android:contentDescription="@string/content_descripshion"
                android:src="@drawable/ic_eye_24"/>

        </LinearLayout>

        <View style="@style/MyStyleLineStyle"></View>

        <LinearLayout style="@style/MyStyleInfoList">

            <ImageView
                style="@style/MyStyleIconLeft"
                android:contentDescription="@string/DescriptionPhone"
                android:src="@drawable/ic_account_24"/>

            <LinearLayout style="@style/MyStyleInfoListContent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/about"
                        style="@style/MyStyleInfoListEditText"
                        android:hint="@string/about_myself"
                        android:inputType="text"
                        android:text="@string/about_myself_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/MyStyleIconRight"
                android:contentDescription="@string/content_descripshion"/>

        </LinearLayout>

        <View style="@style/MyStyleLineStyle"></View>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

