<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_grey"
             android:fitsSystemWindows="true"
             tools:ignore="contentDescription">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"
        />

    <!-- Authorization Box -->
    <LinearLayout
        android:id="@+id/authorization_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/authScreen_authBox_sideOffset"
        android:layout_marginRight="@dimen/authScreen_authBox_sideOffset"
        android:background="@color/color_white"
        android:orientation="vertical">

        <!-- ENTER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8"
            android:layout_marginRight="@dimen/size_24"
            android:layout_marginTop="@dimen/size_24"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="@dimen/size_4"
                android:layout_height="match_parent"
                android:background="@color/color_accent"/>
            <TextView
                android:id="@+id/auth_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_24"
                android:text="@string/header_authorization_enter"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/textSize_20"/>

        </LinearLayout>

        <!-- Login -->
        <LinearLayout
            style="@style/authorization_LL_infoBox"
            android:layout_marginBottom="@dimen/size_8">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/auth_login_editText"
                    style="@style/authorization_editText"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:text="@string/mail_text"
                    android:textSize="@dimen/textSize_12"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!-- Password -->
        <LinearLayout
            style="@style/authorization_LL_infoBox">
                <EditText
                    android:id="@+id/password_editText"
                    style="@style/authorization_editText"
                    android:hint="@string/hint_authorization_password"
                    android:inputType="textPassword"/>
        </LinearLayout>

        <!-- Button ENTER -->
        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8"
            android:layout_marginLeft="@dimen/size_24"
            android:layout_marginRight="@dimen/size_24"
            android:layout_marginTop="@dimen/size_24"
            android:gravity="center">

            <Button
                android:id="@+id/auth_enter_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_36"
                android:text="@string/header_authorization_enter"
                android:textColor="@color/color_black"/>

        </android.support.v7.widget.ButtonBarLayout>

        <!-- Forgotten password -->
        <TextView
            android:id="@+id/forgot_pass_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_28"
            android:layout_marginLeft="@dimen/size_28"
            android:layout_marginRight="@dimen/size_28"
            android:layout_marginTop="@dimen/size_28"
            android:gravity="center"
            android:text="@string/hint.authorization_forgotten_password"
            android:textColor="@color/color_black"/>

    </LinearLayout>

</FrameLayout>